# python-sdk

./: .gitlab-ci.yml  .openapi-generator-ignore  .travis.yml  README.md  git_push.sh  pyproject.toml  setup.cfg  setup.py  tox.ini
.openapi-generator/: FILES
ci/: Dockerfile  smoke_test.py
docs/: AddPolicyRule201Response.md  AddSuppressionRequest.md  AddSuppressionRequestEntriesInner.md  AddSuppressionResponse.md  BulkValidationApi.md  CheckSuppressionRequest.md  CreateJobFromS3Request.md  CreateJobRequest.md  CreatePolicyFromPresetRequest.md  CreatePolicyRequest.md  DeleteJob200Response.md  DeletePolicy200Response.md  DeletePolicyRule200Response.md  EmailValidationApi.md  ErrorResponse.md  GetPresignedUploadRequest.md  HealthCheck200Response.md  Job.md  JobListResponse.md  JobResponse.md  JobSummary.md  Pagination.md  Policy.md  PolicyListResponse.md  PolicyListResponseLimits.md  PolicyPresetsResponse.md  PolicyPresetsResponsePresetsInner.md  PolicyResponse.md  PolicyRule.md  PolicyRuleAction.md  PolicyTestResponse.md  PresignedUploadResponse.md  PresignedUploadResponseUpload.md  RemoveSuppression200Response.md  RemoveSuppressionRequest.md  ResultsResponse.md  SuppressionCheckResponse.md  SuppressionEntry.md  SuppressionListResponse.md  SuppressionListsApi.md  (+20 more)
mailodds/: __init__.py  api_client.py  cli.py  configuration.py  exceptions.py  rest.py
test/: test_add_policy_rule201_response.py  test_add_suppression_request.py  test_add_suppression_request_entries_inner.py  test_add_suppression_response.py  test_bulk_validation_api.py  test_check_suppression_request.py  (+54 more)
(+67 files in other folders)
