[project]
name = "mailodds"
version = "0.2.0"
description = "MailOdds Email Validation API - SDK and CLI"
authors = [
  {name = "MailOdds", email = "support@mailodds.com"},
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["email", "validation", "verification", "mailodds", "api", "sdk"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "urllib3>=2.1.0,<3.0.0",
  "python-dateutil>=2.8.2",
  "pydantic>=2",
  "typing-extensions>=4.7.1",
  "click>=8.0",
  "requests>=2.28",
  "sseclient-py>=1.7",
  "rich>=13.0",
]

[project.scripts]
mailodds = "mailodds.cli:cli"

[project.urls]
Homepage = "https://mailodds.com"
Documentation = "https://mailodds.com/docs"
Repository = "https://github.com/mailodds/python-sdk"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mailodds*"]
